fix sidenav on mobile checkout page

--- a/app/assets/stylesheets/components/checkout.scss
+++ b/app/assets/stylesheets/components/checkout.scss
@@ -1,4 +1,4 @@
-.checkout {
+.groceries-checkout {
   .totals {
     padding-right: 1rem;
     margin-bottom: 1rem;
